Some jmh via gradle work.